# space_shooter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Window.cpp  client.py  client_test.py  discover.cmake  server_test.py  utils.cmake
client/: CMakeLists.txt
client/include/: Channel.h
client/src/: Client.cpp
engine/: CMakeLists.txt
engine/include/: Animation.h  Events.h  Renderer.h  Shader.h  Sprite.h  SpriteShader.h  Texture.h  io.h
engine/src/: Animation.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  SpriteShader.cpp  Texture.cpp  io.cpp
game/: CMakeLists.txt
game/include/: Boom.h  DynamicObject.h  EvolvingObject.h  GameCommand.h  GameState.h  Laser.h  Messages.h  Player.h  Positional.h  Starship.h  Team.h
game/src/: Boom.cpp  DynamicObject.cpp  GameState.cpp  Laser.cpp  Messages.cpp  Player.cpp  Starship.cpp
server/: CMakeLists.txt
server/include/: Channel.h  Client.h  CmdWrapper.h  CommandFactory.h  Connection.h  Game.h  Server.h  Session.h
server/src/: Client.cpp  CommandFactory.cpp  Connection.cpp  Game.cpp  Server.cpp  Session.cpp  main.cpp
window/: CMakeLists.txt
window/include/: Animation.h  Commands.h  Game.h  GameplayState.h  KeyMapper.h  LaserSprite.h  Loader.h  ObjectSprite.h  Player.h  StarshipSprite.h  Window.h
window/src/: Animation.cpp  Commands.cpp  Game.cpp  KeyMapper.cpp  LaserSprite.cpp  Loader.cpp  ObjectSprite.cpp  StarshipSprite.cpp  Window.cpp  main.cpp
